# moosestack

./: AGENTS.md  README.md  pnpm-lock.yaml
.claude/: product-marketing-context.md
.github/: dependabot.yml
.github/workflows/: build-template-images.yaml  release-cli.yaml  test-framework-cli.yaml  test-llm-docs-automation.yaml  validate-examples.yaml
apps/framework-cli/: Cargo.toml
apps/framework-cli-e2e/: package.json
apps/framework-cli-e2e/test/: backward-compatibility.test.ts  build-compile-errors.test.ts  db-pull-defaults.test.ts  incremental-compilation.test.ts  lifecycle.test.ts  migration.test.ts  row-level-security.test.ts  seed-filter.test.ts  templates.test.ts
apps/framework-cli/src/: cli.rs  main.rs  project.rs
apps/framework-cli/src/cli/: commands.rs  local_webserver.rs  logger.rs  processing_coordinator.rs  settings.rs  ts_compilation_watcher.rs  watcher.rs
apps/framework-cli/src/cli/display/: infrastructure.rs  message_display.rs  mod.rs
apps/framework-cli/src/cli/routines/: code_generation.rs  components.rs  docker_packager.rs  docs.rs  feedback.rs  migrate.rs  mod.rs  peek.rs  seed_data.rs  templates.rs
apps/framework-cli/src/cli/routines/components/chat/: component.toml
apps/framework-cli/src/cli/routines/components/mcp-server/: component.toml
apps/framework-cli/src/framework/: languages.rs
apps/framework-cli/src/framework/core/: execute.rs  infra_reality_checker.rs  infrastructure_map.rs  lifecycle_filter.rs  migration_plan.rs  partial_infrastructure_map.rs  plan.rs  plan_validator.rs
apps/framework-cli/src/framework/core/infrastructure/: api_endpoint.rs  function_process.rs  materialized_view.rs  mod.rs  select_row_policy.rs  table.rs  web_app.rs
apps/framework-cli/src/framework/data_model/: model.rs
apps/framework-cli/src/framework/python/: generate.rs  streaming.rs  utils.rs
apps/framework-cli/src/framework/scripts/: mod.rs
apps/framework-cli/src/framework/typescript/: bin.rs  consumption.rs  export_collectors.rs  generate.rs  parser.rs  streaming.rs
apps/framework-cli/src/infrastructure/olap/: clickhouse_http_client.rs  ddl_ordering.rs  mod.rs
apps/framework-cli/src/infrastructure/olap/clickhouse/: config.rs  diff_strategy.rs  mapper.rs  mod.rs  model.rs  queries.rs  remote.rs  sql_parser.rs  type_parser.rs
apps/framework-cli/src/infrastructure/olap/clickhouse/diagnostics/: mod.rs
apps/framework-cli/src/infrastructure/processes/: consumption_registry.rs  functions_registry.rs  kafka_clickhouse_sync.rs  mod.rs  process_registry.rs
apps/framework-cli/src/infrastructure/redis/: redis_client.rs
apps/framework-cli/src/mcp/: compressed_map.rs  server.rs
apps/framework-cli/src/mcp/tools/: infra_map.rs  logs.rs  query_olap.rs  sample_stream.rs
apps/framework-cli/src/mcp/tools/infra_issues/: mod.rs
apps/framework-cli/src/project/: python_project.rs
apps/framework-cli/src/utilities/: capture.rs  constants.rs  docker-compose.yml.hbs  docker.rs  json.rs  migration_plan_schema.json  prod-docker-compose.yml.hbs  validate_passthrough.rs
apps/framework-cli/tests/python/project/: requirements.txt
apps/framework-docs-v2/: .gitignore  FLAGS_README.md  GUIDES_README.md  package.json
examples/ads-b/: AGENTS.md  CLAUDE.md  package.json  tsconfig.json
examples/ads-b-frontend/: AGENTS.md  CLAUDE.md
examples/brainwaves/: AGENTS.md  CLAUDE.md
examples/cdp-analytics/: pnpm-lock.yaml
examples/fastify-moose/: package.json  pnpm-lock.yaml  tsconfig.json
examples/github-dev-trends/: AGENTS.md  CLAUDE.md  package.json
examples/live-heartrate-leaderboard/: AGENTS.md  CLAUDE.md  mock-user-db.json  moose.config.toml  requirements.txt  setup.py  streamlit_app.py
examples/nextjs-moose/: README.md  pnpm-lock.yaml
examples/python-experimental/: AGENTS.md  CLAUDE.md  README.md  moose.config.toml  setup.py
scripts/: package-templates.js  sync-serverless.sh
templates/: TEMPLATES.md  _versions.toml
templates/_shared-python/: .gitignore
templates/_shared-typescript/: .gitignore
templates/ads-b/: package.json
templates/live-heartrate-leaderboard/: requirements.txt  setup.py
templates/next-app-empty/: tsconfig.json
templates/python-cluster/: requirements.txt
templates/python-empty/: requirements.txt
templates/python-experimental/: requirements.txt
templates/python-fastapi/: moose.config.toml  requirements.txt
templates/python-fastapi-client-only/: requirements.txt
templates/python-tests/: moose.config.toml  requirements.txt
templates/python-webapp/: README.md  requirements.txt  setup.py  template.config.toml
templates/typescript/: moose.config.toml  package.json
templates/typescript-cluster/: package.json
templates/typescript-empty/: moose.config.toml  package.json
templates/typescript-express/: package.json
templates/typescript-fastify/: moose.config.toml  package.json
templates/typescript-mcp/: README.md  pnpm-lock.yaml  tsconfig.json
templates/typescript-migrate-test/: moose.config.toml  package.json
templates/typescript-rls-test/: moose.config.toml  package.json  template.config.toml  tsconfig.json
templates/typescript-tests/: moose.config.toml  package.json
(+306 files in other folders)
